# NPR-Studio

./: .gitignore  CMakeLists.txt  README.md  gloo.cfg
assets/: Key.mtl  mit_text.mtl
assets/models/: abstract_shapes.mtl  baseball.mtl  gear.mtl  girl_sit.mtl  streetlamp.mtl
assets/packaging/: npr_studio.icns
assets/presets/: BW_Toon.npr  BW_Toon_Transparent.npr  BlueprintColors.npr  CharcoalColors.npr  DarkComic.npr  EdgeView.npr  IconSettings.npr  blue_red_split.npr  default.npr
assignment_code/assignment6/: OutlineNode.cpp  OutlineNode.hpp  PolylineNode.cpp  PolylineNode.hpp  SunNode.cpp  SunNode.hpp  ToonViewerApp.cpp  ToonViewerApp.hpp  main.cpp
assignment_code/common/: altPolylineFinder.hpp  edgeutils.hpp  helpers.hpp
gloo/: Application.cpp  Application.hpp  Material.hpp  MeshLoader.cpp  Renderer.cpp  Renderer.hpp  utils.cpp  utils.hpp
gloo/cameras/: ArcBallCameraNode.cpp  ArcBallCameraNode.hpp
gloo/components/: ShadingComponent.hpp
gloo/gl_wrapper/: Framebuffer.cpp  Texture.cpp
gloo/shaders/: MiterOutlineShader.cpp  MiterOutlineShader.hpp  OutlineShader.cpp  OutlineShader.hpp  PhongShader.cpp  PhongShader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShadowShader.cpp  ShadowShader.hpp  ToneMappingShader.cpp  ToneMappingShader.hpp  ToonShader.cpp  ToonShader.hpp
gloo/shaders/glsl/: miter_outline.vert  outline.geom  phong.frag  tone_mapping.frag  toon_shading.frag
main_code/common/: edgeutils.cpp  edgeutils.hpp  helpers.cpp
main_code/npr_studio/: OutlineNode.cpp  OutlineNode.hpp  PolylineNode.cpp  PolylineNode.hpp  SunNode.cpp  SunNode.hpp  ToonViewerApp.cpp  ToonViewerApp.hpp  main.cpp
